[package]
name = "surge-ping"
version = "0.8.1"
authors = ["kolapapa <kolapapa2021@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/kolapapa/surge-ping"
repository = "https://github.com/kolapapa/surge-ping"
description = "Asynchronous ICMP ping library"
keywords = ["tokio", "icmp", "ping"]
categories = ["network-programming", "asynchronous"]

[dependencies]
clap = { version = "4.5.20", default-features = false, features = [
    "color",
    "derive",
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",
] }
futures = { version = "0.3.31", default-features = false, features = ["std"] }
hex = { version = "0.4.3", default-features = false, features = ["std"] }
parking_lot = { version = "0.12.3", default-features = false }
pnet_packet = { version = "0.35", default-features = false, features = ["std"] }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
socket2 = { version = "0.5.7", default-features = false, features = ["all"] }
thiserror = { version = "1.0.64", default-features = false }
tokio = { version = "1.40", default-features = false, features = [
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }

[dev-dependencies]
hex = { version = "0.4.3", default-features = false }
